# t-sasatani.github.io

./: .gitignore  Gemfile  LICENSE  README.md  _config.yml  feed.xml  index.html  pyproject.toml  sitemap.xml
_bibliography/: references.bib
_data/: award.yml  career.yml  education.yml  grant.yml  media.yml  metadata.yml  press.yml  profile.yml  publication.yml  publications.yml  service.yml  teaching.yml
_includes/: media.html  publication_list.html
_layouts/: cv.html  default.html  page.html  publication.html  publication_list.html
_pages/: about.md  about_einstein.md  cv.md  licenses.md  media.md  misc.md  publication_list.md  publications.md
_posts/: 2024-08-02-welcome-to-jekyll.markdown
_publications/: 3-d_wireless_charging_for_indoor_electronics_using_multimode_quasistatic_cavity_resonators.md  a_cuttable_wireless_power_transfer_sheet.md  a_halbach-array-based_resonator_for_suppressing_leakage_magnetic_field_in_wireless_power_transfer_systems.md  a_reconfigurable_2-d_wireless_charging_system.md  act-x_.md  alvus_a_reconfigurable_2-d_wireless_charging_system.md  an_inclination_estimation_method_for_uav_landing_surfaces_using_millimeter_wave_radar.md  camera-based_position_estimation_using_frequency-multiplexed_luminance_gradient.md  coil_design_for_wireless_power_transfer_and_communication_over_hinges_of_smart_glasses.md  continuum_robotic_caterpillar_with_wirelessly_powered_shape_memory_alloy_actuators.md  dc-based_impedance_tuning_method_using_magnetic_saturation_for_wireless_power_transfer.md  design_of_cuttable_wireless_power_transfer_sheet.md  (+32 more)
(+16 files in other folders)
